完成bmi計算功能

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,9 @@ span {
             height: 400px;
         }
 
-        textarea {}
+        textarea {
+            height: 200px;
+        }
 
         .sub-title {
             width: 200px;
